one comment added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
   </div>
 </nav>
 
+<!-- this is my change -->
 <!-- Modal -->
 <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
   <div class="modal-dialog">
